# sfml_window_manager

./: CMakeLists.txt  README.md
include/: sfml_window_manager.h
src/: interface.cpp  sfml_window_manager.cpp
